--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
         <div class="bd-example-snippet bd-code-snippet">
             <div class="bd-example m-0 border-0">            
                 <p class="lead">
-                Join us this October to celebrate the UNCG wrestling program and meet up with fellow alumns (35 and counting).
+                Join us this October to celebrate the UNCG wrestling program and meet up with fellow alumns (37 and counting).
                 </p>                
             </div>
         </div>
@@ -178,7 +178,7 @@
                   the induction of Joe Lowe into the Hall of Fame.                
                 </p>
 
-                If you plan on attending please, fill out the <a href="https://forms.office.com/r/cVnjDn7w4z">RSVP Form</a>
+                If you haven't already, please fill out the <a href="https://forms.office.com/r/cVnjDn7w4z">RSVP Form</a>
                 Please help spread the word, we have a lot of <a href="#uncontacted">alumni</a> that we have not been able to get in touch with.
 
 
@@ -220,10 +220,10 @@
                 <br><br>
                 <p class="h2">Guest List (last updated: 8/17)</p>
                 <div class="alert alert-dark" role="alert">
-                  If you see an RSVP mistake or typo or if you notice any missing names, please contact Keith Ritter (336) 337-0505.
+                  If you see an RSVP mistake or mispelled or missing name, please contact Keith Ritter (336) 337-0505.
                 </div>                
                 <article class="my-3" id="attending">
-                  <p class="h3">Attending (35):</p>
+                  <p class="h3">Attending (37):</p>
                 </article>
                 <ul>
                 <li>Kevin	Artis</li>
@@ -233,8 +233,10 @@
                 <li>Trey	Brawley</li>
                 <li>Josh	Bunting</li>
                 <li>Daren	Burns</li>
+                <li>Kevin	Bradley</li>
                 <li>Eric	Chandler</li>
                 <li>Mark	Clark</li>
+                <li>Terry	Garbis</li> 
                 <li>Marcus	Hannah</li>
                 <li>Jeffrey	Hedges</li>
                 <li>Victor	Hojilla</li>
@@ -267,8 +269,7 @@
                   <ul>
                     <li>Tyler	Brodnick</li>
                     <li>Wade	Cecil</li>
-                    <li>Chad	Denton</li>
-                    <li>Terry	Garbis</li>                    
+                    <li>Chad	Denton</li>                                       
                     <li>James	Guzzio</li>
                     <li>Steve	McClamrock</li>
                     <li>Doug	O'Leary</li>
@@ -284,6 +285,7 @@
                     <li>Nate	Berryman</li>
                     <li>Jeremy	Cannon</li>
                     <li>Mike	Crowley</li>
+                    <li>Matt	Dunn</li>
                     <li>Cody	Harrington</li>
                     <li>Charles	Jones</li>
                     <li>John	Kimble</li>                    
@@ -299,7 +301,7 @@
                       <p class="h3">Uncontacted:</p>
                       <div class="alert alert-dark" role="alert">
                         If anyone has contact info for anyone in the list below. Please contact them or pass the contact 
-                        info along to Keith Ritter (336) 337-0505 or Jordan	Krause.
+                        info along to Keith Ritter (336) 337-0505 or Jordan	Krause (305) 798-3355.
                       </div>                        
                       <ul>                    
 
@@ -315,8 +317,7 @@
                 <li>Josh	Bocks</li>
                 <li>Gregory	Booth</li>
                 <li>Lee	Bowman</li>
-                <li>Casey	Boyle</li>
-                <li>Kevin	Bradley</li>
+                <li>Casey	Boyle</li>                
                 <li>Keith	Brown</li>
                 <li>Eric	Browne</li>
                 <li>Justin	Bruscino</li>                
@@ -336,8 +337,7 @@
                 <li>Joe	Couch</li>
                 <li>Maisson	Davis</li>
                 <li>Tray	Daye</li>
-                <li>Dizzle	Dillard</li>
-                <li>Matt	Dunn</li>
+                <li>Dizzle	Dillard</li>                
                 <li>Wallace	DuVall</li>
                 <li>Buddy	Early</li>
                 <li>John	Early</li>
@@ -505,6 +505,10 @@
                 UNCG Wrestling Alumni<br>
                 336-337-0505<br>
                 contact@keithritt.net
+                <br><br>
+                Jordan	Krause <br>
+                UNCG Wrestling Alumni<br>
+                (305) 798-3355<br>
                 <br><br>
                 Chase Blake<br>
                 Associate Athletic Director<br>
