--- a/index.html
+++ b/index.html
@@ -188,15 +188,47 @@
                 <p class="h2">Event Schedule:</p>
               </article>
                 <br><br>
-                <p class="h3">Friday: 4:00 PM</p>
-                <p>Meet at <a href="https://oldtowndraught.com/" target="_">Old Town</a> for food and drinks. 
-                  Afterwards, we can hop around to other places, potentially:
-                  Corner Bar, Jake's Billiards, Suds & Duds.
+                <p class="h3">Friday: 4:00 - 6:00 PM <a href="https://oldtowndraught.com/" target="_">Old Town</a> </p> 
+                <p>
+                  1205 Spring Garden St.<br>
+                  The standard homecoming meetup. Food and drinks available. The Chicken Philly is still amazing.
+                  Unfortunatley, they do not put up a tent anymore for this event. And we will have 50+ people, so if it gets too crowded,
+                  we can head to Boxcar early. 
+                  <br>
+                <p class="h3">Friday: 6:00 - 8:00 PM <a href="https://theboxcarbar.com/greensboro/" target="_">Boxcar Bar + Arcade</a></p> 
+                <p>
+                  120 W Lewis St<br>
+                  Head downtown to for food and drinks and video games. <br>
+                  For those with kids, you may want to get here early, since it is 21+ after 7:00 PM<br>
+                  <br>
+                <p class="h3">Friday: 8:00 PM Downtown</p>
+                  Once downtown, we will be within walking distance of: <br>
+                  Southend Brewery | 
+                  The Quarter |
+                  Bourbon Bowl |
+                  M'Coul's Public House |
+                  Natty Greene's
+                  <br>
+                  Greensboro now run the 
+                  <a href=""https://www.greensboro-nc.gov/departments/transit/downtown-trolley">Hopper Trolly</a> 
+                  <!--
+                  <img src="https://www.greensboro-nc.gov/home/showpublishedimage/37005/638550887777200000">
+                  <a  href=""https://trackmygta.com/map?showHeader=0&route=6084&disable_scroll_wheel=1">(google map)</a>-->
+                  which is a free trolly that runs up and down Elm Street every 15 minutes until midnight.<br>
+                  This can take us to:
+                  Stumble Stilkins |
+                  One Thirteen Brewhouse and Rooftop Bar|(Old Greene St Club)
+                  <br><br>
+                  Also, downtown Greensboro is now a social district and allows open containers while walking.
+
+                  
                 </p>
                 <br>
-                <p class="h3">Saturday: 9:30 AM - 11:00 AM</p>
-                <p><a href="https://uncgspartans.com/news/2024/6/5/general-uncg-to-induct-two-coaches-and-five-athletes-into-athletics-hall-of-fame.aspx" target="_">
-                  Hall of Fame Induction Ceremony</a> in the Cone Ballroom on campus. Joe Lowe, along with 6 others will be honored.
+                <p class="h3">Saturday: 9:30 - 11:00 AM 
+                 <a href="https://uncgspartans.com/news/2024/6/5/general-uncg-to-induct-two-coaches-and-five-athletes-into-athletics-hall-of-fame.aspx" target="_">
+                  Hall of Fame Induction Ceremony</a>
+                </p>
+                <p> In the Cone Ballroom on campus. Joe Lowe, along with 6 others will be honored.
                   All UNCG wrestling alumni are invited, tickets are $50, brunch is included. Reach out to Danielle Sandridge at 
                   <a href="mailto:dwsandridge@uncg.edu">dwsandridge@uncg.edu</a> if you have any questions.
                   <br>RSVP Deadline: September 24th.
@@ -206,25 +238,39 @@
                   </button>                  
                 </p>   
                 <br>           
-                <p class="h3">Saturday: 2:00 PM - 3:30 PM</p>
+                <p class="h3">Saturday: 2:00- 3:30 PM Flemming Gym</p>
                 <p>Official UNCG Alumni Reunion in Flemming Gym. Our conference championship banners will be put back up. 
                   The athletic director Brian Mackin will give a speech and fellow alumn will have an opportunity to speak.
                   Drinks and Snacks will be provided, friends and families are welcome.
                 </p>
                 <br> 
-                <p class="h3">Saturday: 4:00 PM</p>
-                <p>Again, meet at <a href="https://oldtowndraught.com/" target="_">Old Town</a> for food and drinks. 
-                  Afterwards, we can hop around downtown Greensboro, potentially:
-                  Boxcar, South End Brewery, Natty Greene's, Stumble Stilkins, One Thirteen Brewhouse.
+                <p class="h3">Saturday: 4:00 - 6:00 PM <a href="https://www.facebook.com/Jakespubandbilliards" target="_">Jake's Billiards</a></p>
+                <p>Walkable from UNCG, this poolhall has food and drinks and will have a section set up for us.
+                </p>
+                <br>
+                <p class="h3">Saturday: 6:00 - 8:00 PM <a href="https://www.facebook.com/corner.bar.37" target="_">Corner Bar</a></p>
+                <p>Afterwards, we can walk to everyone's favorite dive bar for drinks. 
+                  The bar has expanded and is twice as big as you remember, but much of it is still the same.
+
+                </p> 
+                <br>
+                <p class="h3">Saturday: 8:00 PM TBD</p>               
+                  Later, we can hop around either hit up the Walker and Elam Corner:
+                  Suds & Duds Laudormat bar |
+                  Wahoo's Tavern |
+                  Walker's Tavern 
+                  <br>
+                  or we can go downtown again.
+
                 </p>
                 <br><br>
-                <p class="h2">Guest List (last updated: 8/22)</p>
+                <p class="h2">Guest List (last updated: 9/24)</p>
                 <div class="alert alert-dark" role="alert">
                   If you see an RSVP mistake or mispelled or missing name, please contact Keith Ritter (336) 337-0505.
                 </div>  
 
                 <!-- start paste from google-->
-                <p class="h3"><a id="rsvp_attending" name="attending">Attending (<span id='attendeeCount'>44</span>):</a></p><ul><li>Kevin Artis</li><li>Luke Baily</li><li>Chris Bencivenga</li><li>Kevin Bradley</li><li>Tommy Bravo</li><li>Trey Brawley</li><li>Tyler Brodnick</li><li>Josh Bunting</li><li>Daren Burns</li><li>Eric Chandler</li><li>Mark Clark</li><li>Chad Denton</li><li>Terry Garbis</li><li>Marcus Hannah</li><li>Jeffrey Hedges</li><li>Victor Hojilla</li><li>Mitchell Johnson</li><li>David Johnson</li><li>Othello Johnson</li><li>Jordan Krause</li><li>Andrew Krieger</li><li>Eddie Ledesma</li><li>Joe Lowe</li><li>Michael Lowry</li><li>Eric Luke</li><li>Nate Parmenter</li><li>Dax Pecaro</li><li>Eric Plunkett</li><li>Manny Ramirez</li><li>Brett Reed</li><li>Keith Ritter</li><li>Dave Ritter</li><li>Tripp Rogers</li><li>Walter Scott</li><li>Alejandro Soto-Perez</li><li>Tony Stewart</li><li>Kyle Terrell  - - - (Messaged via text )</li><li>Blake Thomas</li><li>Freddy Valoy</li><li>Corey William</li><li>Ron Williams</li><li>Ben Wilmore</li><li>Jon Woodburn</li><li>Bryan Yonish</li></ul><br<br><p class="h3"><a id="rsvp_undecided" name="undecided">Undecided (15):</a></p><ul><li>Scott Acosta</li><li>Larry  Alexander</li><li>Cain Beard</li><li>Wade Cecil</li><li>Martin Fajerman</li><li>James Guzzio</li><li>Mike Hawkes</li><li>Jamie Hensch</li><li>Robert Hoy</li><li>Steve McClamrock</li><li>Cedrick Moore</li><li>Doug O'Leary</li><li>Steve Pegram</li><li>Chad Starling</li><li>Ryan Sughrue</li></ul><br<br><p class="h3"><a id="rsvp_not_attending" name="not_attending">Not Attending (13):</a></p><ul><li>Nate Berryman</li><li>Jeremy Cannon</li><li>Mike Crowley</li><li>Matt Dunn</li><li>Cody Harrington</li><li>Charles Jones</li><li>John Kimble</li><li>Ivan Lopouchanski</li><li>Mark Mayer</li><li>Daniel Pacitti</li><li>Alex Pierce</li><li>Tyler Shovelin  - - - (Will be in town Thursday night)</li><li>Joe Stanton</li></ul><br<br><p class="h3"><a id="rsvp_uncontacted" name="uncontacted">Uncontacted (125):</a></p><ul><li>Elijah Adams  - - - (Messaged via facebook)</li><li>Evan Baker  - - - (Messaged via facebook)</li><li>Matthew Barbo  - - - (Messaged via facebook)</li><li>Marcus Bell  - - - (Messaged via facebook)</li><li>Shawn Bellanca  - - - (Messaged via facebook)</li><li>Tomye Benson</li><li>Jeremy Blankenship</li><li>Josh Bocks  - - - (Messaged)</li><li>Gregory Booth</li><li>Lee Bowman</li><li>Casey Boyle  - - - (Messaged via facebook)</li><li>Keith Brown</li><li>Eric Browne</li><li>Justin Bruscino  - - - (Messaged via facebook)</li><li>Marc Bryan  - - - (Messaged via facebook)</li><li>Chris Bullins  - - - (Messaged via facebook)</li><li>Trey  Burlinggame  - - - (Messaged via facebook)</li><li>Michael Buscema  - - - (Messaged via facebook)</li><li>Rich Bushby  - - - (Messaged via facebook)</li><li>Kevin Butswinkas  - - - (Messaged via facebook)</li><li>William Byrtus</li><li>Paul  Cardone  - - - (Messaged via facebook)</li><li>Randy Clarida</li><li>Brandon Clarke  - - - (Messaged via facebook)</li><li>Bradford Coffield  - - - (Messaged via facebook)</li><li>Brian Coon</li><li>Daniel Corey</li><li>Joe Couch</li><li>Maisson Davis  - - - (Messaged via facebook)</li><li>Tray Daye</li><li>Dizzle Dillard</li><li>Wallace DuVall</li><li>Buddy Early</li><li>John Early</li><li>Christopher Edge  - - - (Messaged via facebook)</li><li>Jeremy Edwards  - - - (Messaged via facebook)</li><li>Billy Edwards  - - - (Messaged via facebook)</li><li>Dennis Fields  - - - (Messaged via facebook)</li><li>Scott Fisher</li><li>Greg Forbes  - - - (Messaged via facebook)</li><li>David Forbes  - - - (Messaged via facebook)</li><li>Brian Franz</li><li>Jerry Frushon</li><li>Angel Garcia  - - - (Messaged via facebook)</li><li>Kevin Garney  - - - (Messaged via facebook)</li><li>Michael Gialanella  - - - (Messaged via facebook)</li><li>Wes Gibson</li><li>Stacy Grady  - - - (Messaged via facebook)</li><li>Robert Gribschaw  - - - (Messaged via facebook)</li><li>Jamil Hamdan</li><li>Brian Heagren</li><li>Joseph Herron</li><li>Nicholas Hollick  - - - (Messaged via facebook)</li><li>Ryan Hsu  - - - (Messaged via facebook)</li><li>Zachary Hughes</li><li>Martin Jensen</li><li>Jamel Johnson  - - - (Messaged via facebook)</li><li>Chris Johnston</li><li>Jake Keene  - - - (Messaged via facebook)</li><li>Dock Kelly  - - - (Messaged via email)</li><li>Joe Kemmerer  - - - (Messaged via facebook)</li><li>Brian King</li><li>John Kogutkiewicz  - - - (Messaged via facebook)</li><li>William Kopecky</li><li>Joel Kowalsky</li><li>Byran Lawlor  - - - (Messaged)</li><li>Alexander Lehnhoff  - - - (Messaged via facebook)</li><li>Brandon Lemons</li><li>Jason Leone  - - - (Messaged via facebook)</li><li>Jason Loukidas</li><li>Shane Mack</li><li>Mark Mast</li><li>Craig Mcintosh  - - - (Invited via facebook)</li><li>Ryan Midgett</li><li>Brett Miller  - - - (Messaged via facebook)</li><li>Mikal Mkee</li><li>Derek Mondeau  - - - (Messaged via facebook)</li><li>Denny Moore</li><li>Markley Morrison</li><li>Willie Mouzon</li><li>Brian Mullaney</li><li>Billy Osborne  - - - (Messaged)</li><li>Toby Otwell</li><li>James Payne  - - - (Messaged via facebook)</li><li>Jesse Poole</li><li>Paul Rasmussen</li><li>Donnell Rawls  - - - (Messaged via facebook)</li><li>Darnell Rawls</li><li>Eric Rice</li><li>Mark Ring  - - - (Messaged via facebook)</li><li>Corey Sadd</li><li>Eric Sanders</li><li>Andrew Saunders  - - - (Messaged via facebook)</li><li>Melvin Saunders</li><li>Andrew Saunders</li><li>Joe Scolaro  - - - (Messaged via facebook)</li><li>Travis Sheehy</li><li>Joe Sheffield  - - - (Messaged via facebook)</li><li>Travis Shehee  - - - (Messaged via facebook)</li><li>Tom Shifflett</li><li>Byron Sigmon  - - - (Messaged via facebook)</li><li>Daniel Skolochenko</li><li>Kane Smith  - - - (Messaged via text)</li><li>Glenn Spivey</li><li>Benjamin Stark</li><li>William Starling</li><li>Darrell Stewart</li><li>Casey Strobel</li><li>Peter Sturgeon  - - - (Messaged via facebook)</li><li>Anthony Svendsen</li><li>Cedrick Taylor  - - - (Messaged via facebook)</li><li>Michael Teis  - - - (Messaged via text )</li><li>Santonio Thompson  - - - (Messaged via facebook)</li><li>Gilbert Tilghman</li><li>Michael Tyler</li><li>Kevin Vecin</li><li>Gary Wadford</li><li>Ralph Ward</li><li>Anthony Warren  - - - (Messaged via facebook)</li><li>Jason Wear</li><li>Jeremy Wehby</li><li>Caylor Williams</li><li>Jason Woolard</li><li>Terrence Zaleski</li><li>Cameron Ziff</li></ul><br<br>
+                <p class="h3"><a id="rsvp_attending" name="attending">Attending (<span id='attendeeCount'>48</span>):</a></p><ul><li>Scott Acosta</li><li>Kevin Artis</li><li>Luke Baily</li><li>Chris Bencivenga</li><li>Kevin Bradley</li><li>Tommy Bravo</li><li>Trey Brawley</li><li>Tyler Brodnick</li><li>Josh Bunting</li><li>Daren Burns</li><li>Eric Chandler</li><li>Mark Clark</li><li>Chad Denton</li><li>Terry Garbis</li><li>Marcus Hannah</li><li>Jeffrey Hedges</li><li>Victor Hojilla</li><li>Mitchell Johnson</li><li>David Johnson</li><li>Othello Johnson</li><li>Chris Johnston</li><li>Jordan Krause</li><li>Andrew Krieger</li><li>Eddie Ledesma</li><li>Joe Lowe</li><li>Michael Lowry</li><li>Eric Luke</li><li>Cedrick Moore</li><li>Nate Parmenter</li><li>Dax Pecaro</li><li>Eric Plunkett</li><li>Manny Ramirez</li><li>Brett Reed</li><li>Keith Ritter</li><li>Dave Ritter</li><li>Tripp Rogers</li><li>Walter Scott</li><li>Alejandro Soto-Perez</li><li>Chad Starling</li><li>Tony Stewart</li><li>Kyle Terrell</li><li>Blake Thomas</li><li>Freddy Valoy</li><li>Corey William</li><li>Ron Williams</li><li>Ben Wilmore</li><li>Jon Woodburn</li><li>Bryan Yonish</li></ul><br<br><p class="h3"><a id="rsvp_undecided" name="undecided">Undecided (12):</a></p><ul><li>Larry  Alexander</li><li>Wade Cecil</li><li>Jeremy Edwards</li><li>Martin Fajerman</li><li>James Guzzio</li><li>Mike Hawkes</li><li>Jamie Hensch</li><li>Robert Hoy</li><li>Steve McClamrock</li><li>Doug O'Leary</li><li>Steve Pegram</li><li>Ryan Sughrue</li></ul><br<br><p class="h3"><a id="rsvp_not_attending" name="not_attending">Not Attending (15):</a></p><ul><li>Cain Beard</li><li>Nate Berryman</li><li>Josh Bocks  - - - (Messaged)</li><li>Jeremy Cannon</li><li>Mike Crowley</li><li>Matt Dunn</li><li>Cody Harrington</li><li>Charles Jones</li><li>John Kimble</li><li>Ivan Lopouchanski</li><li>Mark Mayer</li><li>Daniel Pacitti</li><li>Alex Pierce</li><li>Tyler Shovelin  - - - (Will be in town Thursday night)</li><li>Joe Stanton</li></ul><br<br><p class="h3"><a id="rsvp_uncontacted" name="uncontacted">Uncontacted (122):</a></p><ul><li>Elijah Adams  - - - (Messaged via facebook)</li><li>Evan Baker  - - - (Messaged via facebook)</li><li>Matthew Barbo  - - - (Messaged via facebook)</li><li>Marcus Bell  - - - (Messaged via facebook)</li><li>Shawn Bellanca  - - - (Messaged via facebook)</li><li>Tomye Benson</li><li>Jeremy Blankenship</li><li>Gregory Booth</li><li>Lee Bowman</li><li>Casey Boyle  - - - (Messaged via facebook)</li><li>Keith Brown</li><li>Eric Browne</li><li>Justin Bruscino  - - - (Messaged via facebook)</li><li>Marc Bryan  - - - (Messaged via facebook)</li><li>Chris Bullins  - - - (Messaged via facebook)</li><li>Trey  Burlinggame  - - - (Messaged via facebook)</li><li>Michael Buscema  - - - (Messaged via facebook)</li><li>Rich Bushby  - - - (Messaged via facebook)</li><li>Kevin Butswinkas  - - - (Messaged via facebook)</li><li>William Byrtus</li><li>Paul  Cardone  - - - (Messaged via facebook)</li><li>Randy Clarida</li><li>Brandon Clarke  - - - (Messaged via facebook)</li><li>Bradford Coffield  - - - (Messaged via facebook)</li><li>Brian Coon</li><li>Daniel Corey</li><li>Joe Couch</li><li>Maisson Davis  - - - (Messaged via facebook)</li><li>Tray Daye</li><li>Dizzle Dillard</li><li>Wallace DuVall</li><li>Buddy Early</li><li>John Early</li><li>Christopher Edge  - - - (Messaged via facebook)</li><li>Billy Edwards  - - - (Messaged via facebook)</li><li>Dennis Fields  - - - (Messaged via facebook)</li><li>Scott Fisher</li><li>Greg Forbes  - - - (Messaged via facebook)</li><li>David Forbes  - - - (Messaged via facebook)</li><li>Brian Franz</li><li>Jerry Frushon</li><li>Angel Garcia  - - - (Messaged via facebook)</li><li>Kevin Garney  - - - (Messaged via facebook)</li><li>Michael Gialanella  - - - (Messaged via facebook)</li><li>Wes Gibson</li><li>Stacy Grady  - - - (Messaged via facebook)</li><li>Robert Gribschaw  - - - (Messaged via facebook)</li><li>Jamil Hamdan</li><li>Brian Heagren</li><li>Joseph Herron</li><li>Nicholas Hollick  - - - (Messaged via facebook)</li><li>Ryan Hsu  - - - (Messaged via facebook)</li><li>Zachary Hughes</li><li>Martin Jensen</li><li>Jamel Johnson  - - - (Messaged via facebook)</li><li>Jake Keene  - - - (Messaged via facebook)</li><li>Dock Kelly  - - - (Messaged via email)</li><li>Joe Kemmerer  - - - (Messaged via facebook)</li><li>Brian King</li><li>John Kogutkiewicz  - - - (Messaged via facebook)</li><li>William Kopecky</li><li>Joel Kowalsky</li><li>Byran Lawlor  - - - (Messaged)</li><li>Alexander Lehnhoff  - - - (Messaged via facebook)</li><li>Brandon Lemons</li><li>Jason Leone  - - - (Messaged via facebook)</li><li>Jason Loukidas</li><li>Shane Mack</li><li>Mark Mast</li><li>Craig Mcintosh  - - - (Invited via facebook)</li><li>Ryan Midgett</li><li>Brett Miller  - - - (Messaged via facebook)</li><li>Mikal Mkee</li><li>Derek Mondeau  - - - (Messaged via facebook)</li><li>Denny Moore</li><li>Markley Morrison</li><li>Willie Mouzon</li><li>Brian Mullaney</li><li>Billy Osborne  - - - (Messaged)</li><li>Toby Otwell</li><li>James Payne  - - - (Messaged via facebook)</li><li>Jesse Poole</li><li>Paul Rasmussen</li><li>Donnell Rawls  - - - (Messaged via facebook)</li><li>Darnell Rawls</li><li>Eric Rice</li><li>Mark Ring  - - - (Messaged via facebook)</li><li>Corey Sadd</li><li>Eric Sanders</li><li>Andrew Saunders  - - - (Messaged via facebook)</li><li>Melvin Saunders</li><li>Andrew Saunders</li><li>Joe Scolaro  - - - (Messaged via facebook)</li><li>Travis Sheehy</li><li>Joe Sheffield  - - - (Messaged via facebook)</li><li>Travis Shehee  - - - (Messaged via facebook)</li><li>Tom Shifflett</li><li>Byron Sigmon  - - - (Messaged via facebook)</li><li>Daniel Skolochenko</li><li>Kane Smith  - - - (Messaged via text)</li><li>Glenn Spivey</li><li>Benjamin Stark</li><li>William Starling</li><li>Darrell Stewart</li><li>Casey Strobel</li><li>Peter Sturgeon  - - - (Messaged via facebook)</li><li>Anthony Svendsen</li><li>Cedrick Taylor  - - - (Messaged via facebook)</li><li>Michael Teis  - - - (Messaged via text )</li><li>Santonio Thompson  - - - (Messaged via facebook)</li><li>Gilbert Tilghman</li><li>Michael Tyler</li><li>Kevin Vecin</li><li>Gary Wadford</li><li>Ralph Ward</li><li>Anthony Warren  - - - (Messaged via facebook)</li><li>Jason Wear</li><li>Jeremy Wehby</li><li>Caylor Williams</li><li>Jason Woolard</li><li>Terrence Zaleski</li><li>Cameron Ziff</li></ul><br<br>
                 <!-- end paste from google-->
                 
 
